kube/base/deployment.yaml
# Simple deployment used to deploy and manage the app in nigelpoulton/getting-started-k8s:1.0
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-service
  labels:
    app: my-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-service
  template:
    metadata:
      labels:
        app: my-service
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: my-service
          image: debojit/my-service:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8085
